package com.github.axaca.prototype.dto;

public record MockApiResponseDTO(String access, String role) {
}
